header alignment issue fixed

--- a/src/app/components/framework/smarttable/smarttable.component.scss
+++ b/src/app/components/framework/smarttable/smarttable.component.scss
@@ -19,7 +19,7 @@ $dateColumnWidth:110px;
   font-size: 14px !important;
   font-weight:300;
   text-align: left;
-     padding: 7px 0px 0px 22px;
+     padding: 22px 5px 0px 20px;
 
   params-cell {
       span:first-child {
